// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEventItem receive matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "center",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPack": "center",
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "8px",
        "paddingLeft": "8px",
        "paddingRight": "8px",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-start",
          "WebkitAlignSelf": "flex-end",
          "WebkitBoxAlign": "start",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-start",
          "alignSelf": "flex-end",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "msFlexAlign": "start",
          "msFlexDirection": "column",
          "msFlexItemAlign": "end",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "MozTransitionProperty": "opacity",
            "MozUserSelect": "none",
            "WebkitTransitionDuration": "0.15s",
            "WebkitTransitionProperty": "opacity",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(0,0,0,0.00)",
            "msUserSelect": "none",
            "transitionDuration": "0.15s",
            "transitionProperty": "opacity",
            "userSelect": "none",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(238,238,238,1.00)",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "height": "36px",
              "width": "36px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "borderBottomLeftRadius": "17px",
                "borderBottomRightRadius": "17px",
                "borderTopLeftRadius": "17px",
                "borderTopRightRadius": "17px",
                "flexBasis": "auto",
                "height": "34px",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "width": "34px",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxFlex": 1,
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitFlexGrow": 1,
          "WebkitJustifyContent": "space-between",
          "alignItems": "stretch",
          "flexDirection": "column",
          "flexGrow": 1,
          "justifyContent": "space-between",
          "marginLeft": "8px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "column",
          "msFlexPack": "justify",
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "space-between",
            "alignItems": "center",
            "borderBottomColor": "rgba(0,195,174,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": "8px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "justify",
            "paddingBottom": "4px",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(163,163,163,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "10px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "marginTop": "2px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          04/01/19 3:03 PM
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Bold",
                "fontSize": "15px",
                "fontWeight": "700",
                "lineHeight": "auto",
                "marginRight": "4px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            0.04
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Bold",
                "fontSize": "10px",
                "fontWeight": "700",
                "lineHeight": "auto",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G$
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "flex-start",
            "WebkitBoxAlign": "start",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "space-between",
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "space-between",
            "msFlexAlign": "start",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-start",
              "WebkitBoxAlign": "start",
              "WebkitBoxDirection": "normal",
              "WebkitBoxFlex": 1,
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "end",
              "WebkitFlexDirection": "column",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "WebkitJustifyContent": "flex-end",
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
              "marginBottom": "auto",
              "marginTop": "auto",
              "msFlexAlign": "start",
              "msFlexDirection": "column",
              "msFlexNegative": 1,
              "msFlexPack": "end",
              "msFlexPositive": 1,
            }
          }
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "marginTop": "auto",
                "paddingRight": "4px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(34,34,34,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "8px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              From
              :
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(34,34,34,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
               Misao Matimbo
            </span>
          </div>
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "color": "rgba(163,163,163,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "10px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            aaa
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-end",
              "WebkitBoxAlign": "end",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "justify",
              "WebkitFlexDirection": "column",
              "WebkitJustifyContent": "space-between",
              "alignItems": "flex-end",
              "flexDirection": "column",
              "justifyContent": "space-between",
              "msFlexAlign": "end",
              "msFlexDirection": "column",
              "msFlexPack": "justify",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "fontFamily": "gooddollar",
                "fontSize": "34px",
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginRight": "0px",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListEventItem send matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "center",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPack": "center",
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "8px",
        "paddingLeft": "8px",
        "paddingRight": "8px",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-start",
          "WebkitAlignSelf": "flex-end",
          "WebkitBoxAlign": "start",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-start",
          "alignSelf": "flex-end",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "msFlexAlign": "start",
          "msFlexDirection": "column",
          "msFlexItemAlign": "end",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "MozTransitionProperty": "opacity",
            "MozUserSelect": "none",
            "WebkitTransitionDuration": "0.15s",
            "WebkitTransitionProperty": "opacity",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(0,0,0,0.00)",
            "msUserSelect": "none",
            "transitionDuration": "0.15s",
            "transitionProperty": "opacity",
            "userSelect": "none",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(238,238,238,1.00)",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "height": "36px",
              "width": "36px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "borderBottomLeftRadius": "17px",
                "borderBottomRightRadius": "17px",
                "borderTopLeftRadius": "17px",
                "borderTopRightRadius": "17px",
                "flexBasis": "auto",
                "height": "34px",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "width": "34px",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxFlex": 1,
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitFlexGrow": 1,
          "WebkitJustifyContent": "space-between",
          "alignItems": "stretch",
          "flexDirection": "column",
          "flexGrow": 1,
          "justifyContent": "space-between",
          "marginLeft": "8px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "column",
          "msFlexPack": "justify",
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "space-between",
            "alignItems": "center",
            "borderBottomColor": "rgba(250,108,119,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": "8px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "justify",
            "paddingBottom": "4px",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(163,163,163,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "10px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "marginTop": "2px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          04/01/19 3:03 PM
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(250,108,119,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Bold",
                "fontSize": "15px",
                "fontWeight": "700",
                "lineHeight": "auto",
                "marginRight": "4px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            0.04
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(250,108,119,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Bold",
                "fontSize": "10px",
                "fontWeight": "700",
                "lineHeight": "auto",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G$
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "flex-start",
            "WebkitBoxAlign": "start",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "space-between",
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "space-between",
            "msFlexAlign": "start",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-start",
              "WebkitBoxAlign": "start",
              "WebkitBoxDirection": "normal",
              "WebkitBoxFlex": 1,
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "end",
              "WebkitFlexDirection": "column",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "WebkitJustifyContent": "flex-end",
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
              "marginBottom": "auto",
              "marginTop": "auto",
              "msFlexAlign": "start",
              "msFlexDirection": "column",
              "msFlexNegative": 1,
              "msFlexPack": "end",
              "msFlexPositive": 1,
            }
          }
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "marginTop": "auto",
                "paddingRight": "4px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(34,34,34,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "8px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              To
              :
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(34,34,34,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
               Misao Matimbo
            </span>
          </div>
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "color": "rgba(163,163,163,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "10px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            aaa
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-end",
              "WebkitBoxAlign": "end",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "justify",
              "WebkitFlexDirection": "column",
              "WebkitJustifyContent": "space-between",
              "alignItems": "flex-end",
              "flexDirection": "column",
              "justifyContent": "space-between",
              "msFlexAlign": "end",
              "msFlexDirection": "column",
              "msFlexPack": "justify",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(250,108,119,1.00)",
                "fontFamily": "gooddollar",
                "fontSize": "34px",
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginRight": "0px",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListEventItem withdraw matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "center",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPack": "center",
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
        "paddingBottom": "8px",
        "paddingLeft": "8px",
        "paddingRight": "8px",
        "paddingTop": "8px",
        "width": "100%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "flex-start",
          "WebkitAlignSelf": "flex-end",
          "WebkitBoxAlign": "start",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitJustifyContent": "space-between",
          "alignItems": "flex-start",
          "alignSelf": "flex-end",
          "flexDirection": "column",
          "justifyContent": "space-between",
          "msFlexAlign": "start",
          "msFlexDirection": "column",
          "msFlexItemAlign": "end",
          "msFlexPack": "justify",
        }
      }
    >
      <div
        aria-disabled={true}
        className="css-view-1dbjc4n"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "MozTransitionProperty": "opacity",
            "MozUserSelect": "none",
            "WebkitTransitionDuration": "0.15s",
            "WebkitTransitionProperty": "opacity",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(0,0,0,0.00)",
            "msUserSelect": "none",
            "transitionDuration": "0.15s",
            "transitionProperty": "opacity",
            "userSelect": "none",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "backgroundColor": "rgba(238,238,238,1.00)",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "height": "36px",
              "width": "36px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitFlexBasis": "auto",
                "borderBottomLeftRadius": "17px",
                "borderBottomRightRadius": "17px",
                "borderTopLeftRadius": "17px",
                "borderTopRightRadius": "17px",
                "flexBasis": "auto",
                "height": "34px",
                "msFlexPreferredSize": "auto",
                "overflowX": "hidden",
                "overflowY": "hidden",
                "width": "34px",
                "zIndex": 0,
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
              style={
                Object {
                  "backgroundColor": "rgba(0,0,0,0.00)",
                  "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                  "backgroundPosition": "center",
                  "backgroundRepeat": "no-repeat",
                  "backgroundSize": "cover",
                  "bottom": "0px",
                  "height": "100%",
                  "left": "0px",
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                  "width": "100%",
                  "zIndex": -1,
                }
              }
            />
            <img
              alt=""
              className="css-accessibilityImage-9pa8cd"
              draggable={false}
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "stretch",
          "WebkitBoxAlign": "stretch",
          "WebkitBoxDirection": "normal",
          "WebkitBoxFlex": 1,
          "WebkitBoxOrient": "vertical",
          "WebkitBoxPack": "justify",
          "WebkitFlexDirection": "column",
          "WebkitFlexGrow": 1,
          "WebkitJustifyContent": "space-between",
          "alignItems": "stretch",
          "flexDirection": "column",
          "flexGrow": 1,
          "justifyContent": "space-between",
          "marginLeft": "8px",
          "msFlexAlign": "stretch",
          "msFlexDirection": "column",
          "msFlexPack": "justify",
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "space-between",
            "alignItems": "center",
            "borderBottomColor": "rgba(0,195,174,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": "8px",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "justify",
            "paddingBottom": "4px",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(163,163,163,1.00)",
              "direction": "ltr",
              "fontFamily": "Roboto",
              "fontSize": "10px",
              "fontWeight": "normal",
              "lineHeight": "22px",
              "marginTop": "2px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          04/01/19 3:03 PM
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Bold",
                "fontSize": "15px",
                "fontWeight": "700",
                "lineHeight": "auto",
                "marginRight": "4px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            0.04
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto-Bold",
                "fontSize": "10px",
                "fontWeight": "700",
                "lineHeight": "auto",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            G$
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "flex-start",
            "WebkitBoxAlign": "start",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "space-between",
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "space-between",
            "msFlexAlign": "start",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "justify",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-start",
              "WebkitBoxAlign": "start",
              "WebkitBoxDirection": "normal",
              "WebkitBoxFlex": 1,
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "end",
              "WebkitFlexDirection": "column",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "WebkitJustifyContent": "flex-end",
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
              "marginBottom": "auto",
              "marginTop": "auto",
              "msFlexAlign": "start",
              "msFlexDirection": "column",
              "msFlexNegative": 1,
              "msFlexPack": "end",
              "msFlexPositive": 1,
            }
          }
        >
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "color": "rgba(85,85,85,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "marginTop": "auto",
                "paddingRight": "4px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(34,34,34,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto",
                  "fontSize": "8px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              From
              :
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(34,34,34,1.00)",
                  "direction": "ltr",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": "16px",
                  "fontWeight": "normal",
                  "lineHeight": "22px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
               Misao Matimbo
            </span>
          </div>
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "color": "rgba(163,163,163,1.00)",
                "direction": "ltr",
                "fontFamily": "Roboto",
                "fontSize": "10px",
                "fontWeight": "normal",
                "lineHeight": "22px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            aaa
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-end",
              "WebkitBoxAlign": "end",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "justify",
              "WebkitFlexDirection": "column",
              "WebkitJustifyContent": "space-between",
              "alignItems": "flex-end",
              "flexDirection": "column",
              "justifyContent": "space-between",
              "msFlexAlign": "end",
              "msFlexDirection": "column",
              "msFlexPack": "justify",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "fontFamily": "gooddollar",
                "fontSize": "34px",
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginRight": "0px",
              }
            }
          >
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
